deployment-example.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress2-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: gcr.io/kuar-demo/kuard-amd64:blue
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
 name: ingress2-service
spec:
 type: ClusterIP
 ports:
 - port: 80
   targetPort: 8080
 selector:
   app: nginx
