ingress-example.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress2-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: ingress.vinalhaven.info
    http:
      paths:
      # - path: /testpath2(/|$)(.*)
      - path: /

        backend:
          serviceName: ingress2-service
          servicePort: 80
